--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html manifest="cache.appcache">
+<!--<html manifest="cache.appcache">-->
+<html>
 
 <head>
     <title>Archtour Chicago</title>
