--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <link href="css/ctaifont.css" rel="stylesheet">
     
     <!-- Map API -->
-    <script src="https://maps.google.com/maps/api/js?sensor=true;key=AIzaSyAyJu0DNQrfJf7wdMlxI9t7hE-lUgc655E"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyAyJu0DNQrfJf7wdMlxI9t7hE-lUgc655E"></script>
 </head>
 
 <body>
