--- a/index.html
+++ b/index.html
@@ -95,31 +95,34 @@
                 <li><strong>活動緣起</strong><hr>
                     <p>建築之旅開始於2001年，伊利諾理工學院（IIT）建築系幾位老學長和學生會會長，在一場飯局中應時任台灣駐芝加哥文化組吳組長的邀約，以介紹芝加哥著名建築給台灣留學生為宗旨，合作籌辦了第一屆「IIT芝加哥建築之旅」。當時總共只有兩位講師和會長兼任工作人員，在短短兩週內規劃出一直沿用至今的14棟經典建築導覽路線與講解內容、摺頁。活動一路傳承發揚，建築之旅已然成為IIT台灣同學會年度最大盛事；規模也擴大成為今天總計近50位講師及工作人員、350名來自鄰近各州台灣同學共襄參與的美國中西部台灣留學生組織最大規模活動。</p>
                 </li>
-                <li><strong>2015建築之旅</strong><hr>
-                    <p>今年，第十四屆芝加哥建築之旅「原味芝加哥」。讓我們拋開艱深建築專業術語，回歸根本帶大家感受、欣賞建築空間的美好；讓在芝加哥的遊子以及旅人們，回到剛踏上這片土地，對陌生大陸的一切都充滿興趣的眼光來細細品味這個既陌生的又熟悉的城市。在9/27號，芝加哥，我們在這裡帶領大家回到每棟建築最一開始的紙上的構想，了解每棟建築背後生成的構思，讓大家看建築與城市之中的詩意。</p>
+                <li><strong>2017建築之旅</strong><hr>
+                    <p>至今堂堂邁入第十七個年頭。今年將以 Great Blue Road 作為主題全新出發。以徒步遊歷的方式，帶領參加的朋友們遊歷芝加哥久富盛名的建築之美<br>Blue Great Road 是一條觀賞體驗芝加哥建築的重要路線。一開始會有"芝加哥學派"建築，然後會經過"國際風格"(international style)特色的建築代表作，然後會經過幾棟"現代主義"建築，蜿蜒到河邊，還可以看到"粗曠主義"跟"新藝術"建築，最後等待各位的是"數位建築" 以及著名的Cloud Gate。</p>
                 </li>
                 <li><strong>活動行程</strong><hr>
-                    <p>10:10 AM 報到開始<br>
-                    10:45 AM 講師簡報<br>
-                    12:50 PM 小隊分組、午餐<br>
-                    01:20 PM 陸路、水上導覽<br>
-                    05:30 PM 千禧公園大合照</p>
+                    <p>1:00 PM 報到註冊 Registration<br>
+                    1:30 PM 開場簡報 Opening and Lecture<br>
+                    3:00 PM 步行 Walking Tour<br>
+                    6:00 PM 千禧公園大合照 Group Photo in the millennium park</p>
                 </li>
                 <li><strong>緊急聯絡人</strong><hr>
-                    <p>張貞桂 (312) 834-4870</p>
+                    <p>周宇軒 (224) 334-6944</p>
                 </li>
                 <li><strong>活動單位</strong><hr>
-                    <p>CTAI<br>
-                    芝加哥台灣建築師學會 (Chicago Taiwanese Architecture Institute) 是一個提供大眾建築相關教育、交流活動以及與台灣建築產業活動交流的非營利組織。本學會的宗旨是將建築教育不以高深艱澀的詞彙呈現，落實到普羅大眾可以參與、了解的活動，並提供一個芝加哥地區建築人才的華語交流平台。
-                </li>
-                <li><strong>贊助商家</strong><hr>
                     <p>
-                        <a href="http://mysweetstation.com/" target="blank"><img src="image/sweetstation.jpg"/></a>
-                        <a href="#" target="blank"><img src="image/BestComputer.jpg"/></a>
-                        <a href="http://www.charlene-transport.com/" target="blank"><img src="image/charlene.jpg"/></a>
-                        <a href="http://www.ocac.gov.tw/ocac/" target="blank"><img src="image/ocac.jpg"/></a>
-                        <a href="http://www.ridgelineconsultantsllc.com/" target="blank"><img src="image/Ridgeline.jpg"/></a>
-                        <a href="http://www.taiwanembassy.org/US/CHI/mp.asp?mp=27" target="blank"><img src="image/teco.jpg"/></a>
+                        <b>CTAI</b><br>
+                        芝加哥台灣建築師學會 (Chicago Taiwanese Architecture Institute) 是一個提供大眾建築相關教育、交流活動以及與台灣建築產業活動交流的非營利組織。本學會的宗旨是將建築教育不以高深艱澀的詞彙呈現，落實到普羅大眾可以參與、了解的活動，並提供一個芝加哥地區建築人才的華語交流平台。<br>
+                        <b>IIT-TSA 台灣學生會</b><br>
+                        <a style="color:white;text-decoration:underline" href="https://sites.google.com/iit.edu/archtour/home?authuser=0" target="_blank">活動首頁</a>
+                    </p>    
+                </li>
+                <li><strong>贊助單位</strong><hr>
+                    <p>
+<!--                        <a href="http://mysweetstation.com/" target="blank"><img src="image/sweetstation.jpg"/></a><br>糖潮<br>-->
+<!--                        <a href="#" target="blank"><img src="image/BestComputer.jpg"/></a><br>萬能電腦<br>-->
+                        <a href="http://www.charlene-transport.com/" target="blank"><img src="image/charlene.jpg"/></a><br>巨力國際運輸集團<br>
+                        <a href="http://www.ocac.gov.tw/ocac/" target="blank"><img src="image/ocac.jpg"/></a><br>中華民國僑務委員會<br>
+<!--                        <a href="http://www.ridgelineconsultantsllc.com/" target="blank"><img src="image/Ridgeline.jpg"/></a><br>Ridgeline Consultants<br>-->
+<!--                        <a href="http://www.taiwanembassy.org/US/CHI/mp.asp?mp=27" target="blank"><img src="image/teco.jpg"/><br>台北經濟文化辦事處<br></a>-->
                     </p>
                 </li>
                 <li style="font-size:8px;">made with &hearts; by CTAI&trade;</li>
