Social Sharing Meta Tags
Update meta tags for Facebook & Twitter

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
     <title>Archtour Chicago</title>
 
-    <meta charset="UTF-8" />
+	<meta charset="UTF-8">
+    <meta name="description" content="帶你認識芝加哥地區的知名建築">
 
     <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +20,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <!-- Android -->
     <link rel="icon" sizes="180x180" href="image/logo_android.png">
+    
+    <!-- Social Sharing -->
+	<meta property="og:title" content="Archtour Chicago">
+	<meta property="og:type" content="website">
+    <meta property="og:description" content="帶你認識芝加哥地區的知名建築">
+    <meta property="og:image" content="https://shiaoshin.github.io/archtour/image/logo_ios.png">
+    <meta property="og:url" content="https://shiaoshin.github.io/archtour/">
+    <meta property="og:site_name" content="芝加哥建築之旅 App">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:label1" value="Made by">
+    <meta name="twitter:data1" value="CTAI">
+    <meta name="twitter:label2" value="">
+    <meta name="twitter:data2" value="">
     
     <!-- Font -->
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,600,400' rel='stylesheet' type='text/css'>
