--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                 <li><strong>活動單位</strong><hr>
                     <p>
                         <b>IIT-TSA 台灣學生會</b><br>
-                        <a style="color:white;text-decoration:underline" href="https://sites.google.com/iit.edu/archtour/home?authuser=0" target="_blank">活動首頁</a>
+                        <a style="color:white;text-decoration:underline" href="https://sites.google.com/iit.edu/archtour/home?authuser=0" target="_blank">活動首頁</a><br>
                         <b>CTAI</b><br>
-                        芝加哥台灣建築師學會 (Chicago Taiwanese Architecture Institute) 是一個提供大眾建築相關教育、交流活動以及與台灣建築產業活動交流的非營利組織。本學會的宗旨是將建築教育不以高深艱澀的詞彙呈現，落實到普羅大眾可以參與、了解的活動，並提供一個芝加哥地區建築人才的華語交流平台。<br>
+                        芝加哥台灣建築師學會 (Chicago Taiwanese Architecture Institute) 是一個提供大眾建築相關教育、交流活動以及與台灣建築產業活動交流的非營利組織。本學會的宗旨是將建築教育不以高深艱澀的詞彙呈現，落實到普羅大眾可以參與、了解的活動，並提供一個芝加哥地區建築人才的華語交流平台。
                     </p>    
                 </li>
                 <li><strong>贊助單位</strong><hr>
