add call styles

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     6:00 PM 千禧公園大合照 Group Photo in the millennium park</p>
                 </li>
                 <li><strong>緊急聯絡人</strong><hr>
-                    <p>周宇軒 (224) 334-6944</p>
+                    <p>周宇軒 <a style="color:white;text-decoration:underline" target="_blank" href="tel:2243346944">(224) 334-6944</a></p>
                 </li>
                 <li><strong>活動單位</strong><hr>
                     <p>
